Fails to compile with clang (main)
../nautilus/src/nautilus-search-engine-recent.c:302:26: error: variable 'target_time' is used uninitialized whenever 'if' condition is false [-Werror,-Wsometimes-uninitialized]
else if (type == NAUTILUS_QUERY_SEARCH_TYPE_LAST_MODIFIED)
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../nautilus/src/nautilus-search-engine-recent.c:307:53: note: uninitialized use occurs here
if (!nautilus_file_date_in_between (target_time,
^~~~~~~~~~~
../nautilus/src/nautilus-search-engine-recent.c:302:22: note: remove the 'if' if its condition is always true
else if (type == NAUTILUS_QUERY_SEARCH_TYPE_LAST_MODIFIED)
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../nautilus/src/nautilus-search-engine-recent.c:290:36: note: initialize the variable 'target_time' to silence this warning
guint64 target_time;
^
= 0
1 error generated.
Seems GCC doesn't run into this as that compiled fine.
HEAD is at 5b4084de