search-engine-recent: Drop dead code

Relates: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2152